[sprint_19] add show schedule
